[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/cfc/assets/icons/cog.png" type="Texture" id=1]
[ext_resource path="res://addons/cfc/src/dreamscape/PlayerInfo.gd" type="Script" id=2]
[ext_resource path="res://addons/cfc/fonts/Butler/Butler_Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/cfc/fonts/Butler/Butler_Light.otf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/cfc/assets/icons/heart-beats.png" type="Texture" id=5]
[ext_resource path="res://addons/cfc/assets/icons/book-pile.png" type="Texture" id=6]
[ext_resource path="res://addons/cfc/fonts/Butler/Butler_Medium.otf" type="DynamicFontData" id=7]
[ext_resource path="res://addons/cfc/assets/icons/drama-masks.png" type="Texture" id=8]
[ext_resource path="res://addons/cfc/src/dreamscape/PathosEntryInfo.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/cfc/themes/darktheme/darktheme.theme" type="Theme" id=10]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="PlayerInfo" type="PanelContainer"]
margin_right = 1455.0
margin_bottom = 49.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBC" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1448.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 35 )

[node name="HealthIcon" type="TextureRect" parent="HBC"]
modulate = Color( 1, 0.72549, 0, 1 )
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Health" type="Label" parent="HBC"]
margin_left = 39.0
margin_top = 5.0
margin_right = 92.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
text = "0/90"

[node name="Artifacts" type="HBoxContainer" parent="HBC"]
margin_left = 96.0
margin_right = 96.0
margin_bottom = 35.0
custom_constants/separation = 5

[node name="Push" type="Control" parent="HBC"]
margin_left = 100.0
margin_right = 633.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="Encounter" type="Label" parent="HBC"]
margin_left = 637.0
margin_top = 5.0
margin_right = 752.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Encounter 1"

[node name="Push2" type="Control" parent="HBC"]
margin_left = 756.0
margin_right = 1289.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="Pathos" type="Button" parent="HBC"]
margin_left = 1293.0
margin_right = 1328.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 8 )
expand_icon = true

[node name="Deck" type="Button" parent="HBC"]
margin_left = 1332.0
margin_right = 1402.0
margin_bottom = 35.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 3 )
text = "10"
icon = ExtResource( 6 )
expand_icon = true

[node name="Settings" type="Button" parent="HBC"]
margin_left = 1406.0
margin_right = 1441.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 0 )
icon = ExtResource( 1 )
expand_icon = true

[node name="DeckPreview" type="PopupPanel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1448.0
margin_bottom = 42.0
custom_styles/panel = SubResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="DeckPreview"]
margin_right = 1441.0
margin_bottom = 35.0

[node name="GridContainer" type="GridContainer" parent="DeckPreview/ScrollContainer"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[node name="PathosDetails" type="PopupPanel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 300.0
margin_bottom = 62.0
theme = ExtResource( 10 )

[node name="VBC" type="VBoxContainer" parent="PathosDetails"]
margin_left = 2.0
margin_top = 2.0
margin_right = 321.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PathosDetails/VBC"]
margin_right = 65.0
margin_bottom = 24.0
text = "Pathos"
align = 1

[node name="Header" parent="PathosDetails/VBC" instance=ExtResource( 9 )]
margin_top = 27.0
margin_right = 289.0
margin_bottom = 51.0

[node name="Name" parent="PathosDetails/VBC/Header" index="0"]
margin_bottom = 24.0
text = "Name"

[node name="Represed" parent="PathosDetails/VBC/Header" index="1"]
margin_left = 103.0
margin_right = 203.0
margin_bottom = 24.0
text = "Repressed"

[node name="Released" parent="PathosDetails/VBC/Header" index="2"]
margin_left = 206.0
margin_right = 289.0
margin_bottom = 24.0
text = "Released"

[connection signal="pressed" from="HBC/Pathos" to="." method="_on_Pathos_pressed"]
[connection signal="pressed" from="HBC/Deck" to="." method="_on_Deck_pressed"]
[connection signal="pressed" from="HBC/Settings" to="." method="_on_Settings_pressed"]

[editable path="PathosDetails/VBC/Header"]
